k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
  namespace: nodeapp
  labels:
    app: nodeapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapp 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1  #create 1 extra pod during updates
      maxUnavailable: 0  #zero max no of pods can be down until new ones are created
  template: 
    metadata:
      labels:
        app: nodeapp
    spec:    
      containers:
      - name: nodeapp
        image: kejawa/project-1:latest
        ports:
        - containerPort: 8080
        livenessProbe: # restarts a crashed container.
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe: # stops traffic to a pod that's not ready yet
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10  
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"

# Mi - Mebibytes
# m - millicores. 1000m = 1 full CPU core
