k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
  namespace: nodeapp
spec:
  ingressClassName: nginx
  rules:
  - host: 217.76.61.226.nip.io  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodeapp-svc
            port:
              number: 80
